--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Guitar-shop — описание">
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-    <link rel="manifest" href="favicon/site.webmanifest">
-    <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#131212">
+    <link rel="apple-touch-icon" sizes="180x180" href="./public/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./public/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./public/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./public/favicon/site.webmanifest">
+    <link rel="mask-icon" href="./public/favicon/safari-pinned-tab.svg" color="#131212">
     <meta name="msapplication-TileColor" content="#131212">
     <meta name="theme-color" content="#131212">
-    <link rel="preload" href="fonts/open-sans.woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="fonts/open-sans-700.woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="fonts/droid-sans-700.woff2" as="font" crossorigin="anonymous">
-    <link rel="preload" href="fonts/droid-sans.woff2" as="font" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="preload" href="./public/fonts/open-sans.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="./public/fonts/open-sans-700.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="./public/fonts/droid-sans-700.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="./public/fonts/droid-sans.woff2" as="font" crossorigin="anonymous">
+    <link rel="stylesheet" href="./public/css/style.min.css">
   </head>
   <body>
     <div class="visually-hidden">
@@ -69,6 +69,6 @@
     </div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script type="module" src="/src/index.tsx"></script>
+    <script type="module" src="./src/index.tsx"></script>
   </body>
 </html>
